# RCL

./: RDMA流优先级.mht  README.md  rcl.code-workspace
AllReduce/computation/: aggregator.cpp
AllReduce/main/: CMakeLists.txt  aggtest.cpp  aggtest_standalone.cpp
AllReduce/network/rdma/: RDMABenchmark.cpp
AllReduce/rdma/rdma_v6.2-v4.16-batch/: Makefile  RDMABase.cpp  RDMABase.h  RDMABenchmark.cpp  RDMAClient.cpp  RDMAServer.cpp
AllReduce/utils/: thread_pool.hpp
RDMA-bai/: README.md
RDMA-bai/device-query/: Makefile  main.c
RDMA-bai/my-ib-read-lat/: Makefile  client.c  common.c  common.h  server.c
RDMA-bai/my-ib-send-lat/: Makefile  client.c  common.c  common.h  server.c
RDMA-bai/my-ib-write-lat/: Makefile  client.c  common.c  common.h  server.c
RDMA-bai/pfc-gen/: arping.py  fc.py  pfc.py  ping.py
RDMA-bai/rc-ping-pong/: Makefile  client.c  common.c  common.h  server.c
RDMA-bai/rc-send-perf/: Makefile  client.c  common.c  common.h  server.c
all_reduce_tree/: Makefile
all_reduce_tree/networking_service/: .gdb_history  CMakeLists.txt  Makefile  RDADME.md  README.md
all_reduce_tree/networking_service/example/: rdma_service_benchmark.cpp
all_reduce_tree/networking_service/include/: config.h  double_binary_tree.h  endnode.h  network_service.h  pre_connector.h  rdma_adapter.h  rdma_base.h  rdma_client.h  rdma_context.h  rdma_server.h  rdma_session.h
all_reduce_tree/networking_service/include/utils/: logging.h  net_util.h
all_reduce_tree/networking_service/src/: CMakeLists.txt  network_service.cpp  pre_connector.cpp  rdma_adapter.cpp  rdma_client.cpp  rdma_server.cpp  rdma_session.cpp
all_reduce_tree/scheduling_service/include/: coordinator.h
all_reduce_tree/summation_service/: CMakeLists.txt
all_reduce_tree/summation_service/back_up/: Makefile  omp.cpp
all_reduce_tree/summation_service/example/: summation_service_benchmark.cpp
all_reduce_tree/summation_service/include/: summation_service.h
all_reduce_tree/summation_service/include/util/: spsc_queue.h  timer_record.h
all_reduce_tree/summation_service/lib/: CMakeLists.txt  summation_service.cpp
bkups/: .gitignore  Makefile  README.md  main.cpp
bkups/src/: rdma_buffer.cpp  rdma_buffer.h  rdma_channel.cpp  rdma_endpoint.cpp  rdma_endpoint.h  rdma_memorypool.cpp  rdma_memorypool.h  rdma_pre.h  rdma_session.cpp  rdma_session.h  rdma_util.cpp  rdma_util.h  tcp_sock_pre.cpp
ib_write_test/: main.cc
new_rdma/: CMakeLists.txt  Makefile
new_rdma/doc/: uml.vsdx  ~$$uml.~vsdx
new_rdma/include/: blocking_queue.h  pre_connector.h  rdma_adapter.h  rdma_channel.h  rdma_client.h  rdma_context.h  rdma_endpoint.h  rdma_server.h  rdma_session.h  tmp_rdma_adapter.h  tmp_rdma_channel.h  tmp_rdma_end_point.h  tmp_rdma_session.h
new_rdma/include/util/: time_event.h  time_record.h
new_rdma/src/: CMakeLists.txt  rdma_adapter.cpp  rdma_channel.cpp  rdma_client.cpp  rdma_context.cpp  rdma_endpoint.cpp  rdma_server.cpp  rdma_session.cpp  tmp_rdma_adapter.cpp  tmp_rdma_channel.cpp  tmp_rdma_client.cpp  tmp_rdma_end_point.cpp  tmp_rdma_server.cpp  tmp_rdma_session.cpp
new_rdma/test_case/: main.cpp
perftest/: CMakeLists.txt
perftest/src/: config.h  multicast_resources.cpp  perftest_communication.cpp  perftest_parameters.cpp  perftest_parameters.h  perftest_resources.cpp  perftest_resources.h  raw_ethernet_resources.cpp
perftest/test-example/: read_bw.c  write_bw.cpp
rdma-file-transfer/: Makefile  client.cpp  common.cpp  common.h  server.cpp
rdma_full_mesh_benchmark/: Makefile  RDMABase.cpp  RDMABase.h  RDMABenchmark.cpp  RDMAClient.cpp  RDMAClient.h  RDMAServer.cpp  RDMAServer.h  README.txt  benchmark.py  blockQueue.h  timer.h
rdma_v6.2-v4.16-batch/: Makefile  RDMABenchmark.cpp  RDMAClient.cpp  RDMAServer.cpp  timer.cpp
rdma_width_test/: RDMABenchmark.cpp  RDMAClient.cpp  RDMAClient.h  RDMAServer.cpp
src/: CMakeLists.txt  Makefile  benchmark.cpp  preconnector.cpp  preconnector.h  service.cpp
src/core/: pre_connector.cpp  pre_connector.h  rdma_channel.cpp  rdma_channel.h  rdma_endpoint.cpp  rdma_endpoint.h  rdma_mem_mgr.cpp  rdma_mem_mgr.h  rdma_session.cpp  rdma_session.h  util.h
src/test_example/: benchmark.cpp  service.cpp
